# hacker-news-go

backend/: Dockerfile  main.py  pyproject.toml
backend/src/db/: session.py  tables.py
etl/: Dockerfile  cluster_hn_stories.py  fetch_hn_stories.py  main.py  pyproject.toml  run_etl.py
etl/migrations/: env.py
etl/migrations/versions/: 3b20dfbc59e4_create_stories_table.py  72a3ad1a4d79_enrich_stories_table.py  be133a10ce0e_modify_stories_table.py
frontend/: package-lock.json  package.json  railpack.json
frontend/src/: App.css  App.tsx  index.css
py-backend/: Dockerfile  main.py  pyproject.toml
py-backend/migrations/versions/: be133a10ce0e_modify_stories_table.py
py-backend/src/db/: tables.py
science/: pyproject.toml
science/data/: stories.csv
science/notebooks/: eda.py
