[project]
name = "etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "alembic>=1.18.3",
    "connectorx>=0.4.5",
    "fastembed>=0.7.4",
    "loguru>=0.7.3",
    "polars>=1.38.1",
    "prefect>=3.6.15",
    "psycopg[binary]>=3.3.2",
    "scikit-learn>=1.8.0",
    "sqlalchemy[asyncio]>=2.0.46",
]
